--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.6.0
   carousel_slider: ^4.2.1
+  input_history_text_field: ^0.2.0
+  gradient_textfield: ^0.0.1
 
 dev_dependencies:
   flutter_test:
