--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   input_history_text_field: ^0.2.0
   gradient_textfield: ^0.0.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
