--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   input_history_text_field: ^0.2.0
   gradient_textfield: ^0.0.1
   get: ^4.6.6
+  book_my_seat: ^1.0.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
